--- a/pinpoint/angular.json
+++ b/pinpoint/angular.json
@@ -128,7 +128,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
@@ -174,7 +176,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ionic/angular-toolkit"
+    "defaultCollection": "@ionic/angular-toolkit",
+    "analytics": "021e05f4-0417-4552-a236-991f7b4823e6"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
